# CMSJMECalculators

./: .gitignore  BuildFile.xml  CMakeLists.txt  Config.cmake.in  LICENSE  README.md  getjetclasses.sh  jetclasses.patch  jetclasses_filenames.txt  pyproject.toml  setup.cfg  setup.py  test-environment.yml
.github/workflows/: ci.yml
include/: JMESystematicsCalculators.h
interface/: FatJetVariationsCalculator.h  FixEE2017Type1METVariationsCalculator.h  JMESystematicsCalculators.h  JetMETVariationsCalculatorBase.h  JetVariationsCalculator.h  Type1METVariationsCalculator.h  Utility.h
python/CMSJMECalculators/: __init__.py  jetdatabasecache.py  load.py  utils.py
src/: FatJetVariationsCalculator.cc  FixEE2017Type1METVariationsCalculator.cc  JMESystematicsCalculators.cc  JetMETVariationsCalculatorBase.cc  JetVariationsCalculator.cc  Type1METVariationsCalculator.cc
tests/: test_jmesystcalc.py
tests/data/: DY_M50_2016postproc_FatJetKin.root  DY_M50_2016postproc_JMEKin_bTagShape_puWeight.root  DY_M50_2017postproc_JMEKin_METFixEE2017.root  DY_M50_2018postproc_hemfix.root  samples.txt
