[metadata]
name = cmsjmecalculators
description = A ROOT::RDataFrame-friendly implementation of jet and MET variations for the CMS experiment NanoAOD files
long_description = file: README.md
url = 'https://github.com/pieterdavid/cmsjmecalculators'
author = Pieter David
author_email = pieter.david@cern.ch
license = GPL-3.0-or-later
license_files = LICENSE
keywords = ROOT, RDataFrame, CMS experiment, collider, jet reconstruction, missing transverse momentum, NanoAOD

classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 2 - Alpha

[options]
python_requires = >=3.6
install_rquires =
  requests

[options.extras_require]
test =
  pytest >=4.6
dev =
  pytest >=4.6
  pre-commit
  mypy
interactive =
  IPython
docs =
  sphinx

[options.entry_points]
console_scripts =
    checkCMSJMEDatabaseCaches = CMSJMECalculators.jetdatabasecache:checkCMS_CLI

[tool:pytest]
testpaths = tests
